# atpoe

./: README.md  STYLE_COMPLIANCE_CHECKLIST.md  __init__.py  config.yaml  pyproject.toml  rules.yaml  test_segment_length.py
atpoe/: __init__.py  config_loader.py  curve_generator.py  fog_polygon_generator.py  segment_algorithm.py
atpoe/utils/: __init__.py  geometric_utils.py  polygon_generator.py  polygon_validation.py  segment_analysis.py  visualization.py
discussions/: 2024-08-20_curve_following_algorithm.md  2024-08-20_future_enhancements.md  2024-08-20_project_redesign.md
tests/: test_fog_polygon_generation.py  test_geometric_lines.py  test_segment_analysis.py  test_segment_length_pathologies.py  test_simple_algorithm.py  validate_polyline_function.py
